--- a/frontend/IcareMobile/app/src/main/res/values/themes.xml
+++ b/frontend/IcareMobile/app/src/main/res/values/themes.xml
@@ -15,4 +15,9 @@
         <item name="windowSplashScreenAnimatedIcon">@drawable/splash</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.MyApplication</item>
     </style>
+
+    <style name="roundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+    </style>
 </resources>
