--- a/frontend/IcareMobile/app/src/main/res/layout/fragment_report.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/fragment_report.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_primary"
     tools:context=".Fragment.ReportFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,15 +15,26 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="REPORT"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Consultings "
             android:textColor="@color/bg_white"
-            android:textSize="34sp"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.055"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteY="209dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            tools:listitem="@layout/counsult_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
