--- a/frontend/IcareMobile/app/src/main/res/layout/activity_doctor_details.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_doctor_details.xml
@@ -33,7 +33,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView6"
         android:layout_width="370dp"
-        android:layout_height="120dp"
+        android:layout_height="0dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
@@ -53,54 +53,42 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imageView8"
-                android:layout_width="85dp"
-                android:layout_height="90dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/doctorpic"
+                android:src="@drawable/baseline_access_time_filled_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/roundedImageView" />
 
             <TextView
-                android:id="@+id/textView24"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/montserrat_bold"
-                android:text="Dr.  Samantha Willy"
-                android:textColor="@color/bg_white"
-                android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView8"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
                 android:id="@+id/textView25"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:alpha="0.5"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Eye Care Specialist"
+                android:text="Availability"
                 android:textColor="@color/bg_white"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView8"
-                app:layout_constraintTop_toBottomOf="@+id/textView24" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="21dp"
                 android:alpha="0.5"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Appolo Medicals"
+                android:text="6pm - 11pm"
                 android:textColor="@color/bg_green"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView8"
                 app:layout_constraintTop_toBottomOf="@+id/textView25" />
         </androidx.constraintlayout.widget.ConstraintLayout>
