--- a/frontend/IcareMobile/app/src/main/res/layout/activity_eye_scan.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_eye_scan.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/bg_secondary"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +72,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="24dp"
                 app:cardBackgroundColor="@color/bg_btn"
                 app:cardCornerRadius="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -256,25 +257,27 @@
                 android:id="@+id/textView61"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Disease : "
                 android:textColor="@color/bg_white"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView38"
-                tools:layout_editor_absoluteX="81dp" />
+                app:layout_constraintStart_toEndOf="@+id/cardView14"
+                app:layout_constraintTop_toBottomOf="@+id/textView38" />
 
             <TextView
                 android:id="@+id/textView67"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Disease : "
                 android:textColor="@color/bg_white"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView63"
-                tools:layout_editor_absoluteX="81dp" />
+                app:layout_constraintStart_toEndOf="@+id/cardView12"
+                app:layout_constraintTop_toBottomOf="@+id/textView63" />
 
             <TextView
                 android:id="@+id/textView68"
@@ -297,8 +300,8 @@
                 android:text="Blug Eyes"
                 android:textColor="@color/bg_white"
                 android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView38"
-                tools:layout_editor_absoluteX="153dp" />
+                app:layout_constraintStart_toEndOf="@+id/textView61"
+                app:layout_constraintTop_toBottomOf="@+id/textView38" />
 
             <TextView
                 android:id="@+id/textView59"
@@ -329,25 +332,27 @@
                 android:id="@+id/textView63"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:alpha="0.5"
                 android:fontFamily="@font/montserrat"
                 android:text="Prediction Rate :  "
                 android:textColor="@color/bg_white"
                 android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView61"
-                tools:layout_editor_absoluteX="81dp" />
+                app:layout_constraintStart_toEndOf="@+id/cardView14"
+                app:layout_constraintTop_toBottomOf="@+id/textView61" />
 
             <TextView
                 android:id="@+id/textView69"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:alpha="0.5"
                 android:fontFamily="@font/montserrat"
                 android:text="Prediction Rate :  "
                 android:textColor="@color/bg_white"
                 android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView67"
-                tools:layout_editor_absoluteX="81dp" />
+                app:layout_constraintStart_toEndOf="@+id/cardView12"
+                app:layout_constraintTop_toBottomOf="@+id/textView67" />
 
             <TextView
                 android:id="@+id/textView70"
@@ -358,8 +363,8 @@
                 android:text="75.6767%"
                 android:textColor="@color/bg_white"
                 android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@+id/textView67"
-                tools:layout_editor_absoluteX="202dp" />
+                app:layout_constraintStart_toEndOf="@+id/textView69"
+                app:layout_constraintTop_toBottomOf="@+id/textView67" />
 
             <TextView
                 android:id="@+id/textView64"
@@ -535,6 +540,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -558,5 +564,17 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView25"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView57"
+        app:srcCompat="@drawable/scanupload" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
