--- a/frontend/IcareMobile/app/src/main/res/layout/activity_my_profile.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_my_profile.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/textView76"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="moshdev22132gmail.com"
                 android:textColor="@color/bg_white"
@@ -41,7 +41,7 @@
                 android:id="@+id/textView75"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
                 android:alpha="0.5"
                 android:capitalize="words"
                 android:fontFamily="@font/montserrat"
@@ -58,21 +58,267 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView22"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
         app:cardBackgroundColor="@color/bg_secondary"
         app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView21"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView20">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/editTextText11"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Street"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/editTextText12"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextText10" />
+
+            <EditText
+                android:id="@+id/editTextText13"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Province"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/editTextText14"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextText11" />
+
+            <EditText
+                android:id="@+id/editTextText15"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="24dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Blood Group"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/editTextText16"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextText13" />
+
+            <EditText
+                android:id="@+id/editTextText16"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Age"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editTextText15"
+                tools:layout_editor_absoluteY="292dp" />
+
+            <EditText
+                android:id="@+id/editTextText14"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Gender"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@+id/editTextText13"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editTextText13"
+                app:layout_constraintTop_toTopOf="@+id/editTextText13" />
+
+            <EditText
+                android:id="@+id/editTextText12"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="District"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editTextText11"
+                app:layout_constraintTop_toBottomOf="@+id/editTextText10" />
+
+            <EditText
+                android:id="@+id/editTextText10"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Username eg :- moshdev2213"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextText7" />
+
+            <EditText
+                android:id="@+id/editTextText5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Email"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/editTextText6"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editTextText7"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Firstname"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/editTextText8"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
+
+            <EditText
+                android:id="@+id/editTextText8"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Lastname"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@+id/editTextText7"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editTextText7"
+                app:layout_constraintTop_toTopOf="@+id/editTextText7" />
+
+            <EditText
+                android:id="@+id/editTextText6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:width="200dp"
+                android:alpha="0.5"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:fontFamily="@font/montserrat"
+                android:hint="Password"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textColor="@color/bg_white"
+                android:textColorHint="@color/bg_white"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/editTextText5"
+                tools:layout_editor_absoluteY="24dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -100,8 +346,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView23"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
@@ -115,7 +361,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView19"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
@@ -130,13 +376,43 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/textView80"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat"
+                android:text="72 Bpm"
+                android:textColor="@color/bg_white"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView78" />
+
+            <TextView
+                android:id="@+id/textView78"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="Heart Beat Rate"
+                android:textColor="@color/bg_white"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView18"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         app:cardBackgroundColor="@color/bg_secondary"
@@ -152,6 +428,35 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
+            <TextView
+                android:id="@+id/textView77"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="Blood Type"
+                android:textColor="@color/bg_white"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView79"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat"
+                android:text="A+"
+                android:textColor="@color/bg_white"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView77" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
