--- a/frontend/IcareMobile/app/src/main/res/layout/activity_sign_in.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_sign_in.xml
@@ -86,11 +86,12 @@
         android:background="@drawable/custom_input"
         android:ems="10"
         android:fontFamily="@font/montserrat"
+        android:hint="Email"
         android:inputType="text"
         android:padding="10dp"
-        android:hint="Email"
-        android:textColorHint="@color/bg_white"
         android:textColor="@color/bg_white"
+        android:textColorHint="@color/bg_white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -105,11 +106,12 @@
         android:background="@drawable/custom_input"
         android:ems="10"
         android:fontFamily="@font/montserrat"
+        android:hint="Password"
         android:inputType="text"
         android:padding="10dp"
-        android:hint="Password"
-        android:textColorHint="@color/bg_white"
         android:textColor="@color/bg_white"
+        android:textColorHint="@color/bg_white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
