--- a/frontend/IcareMobile/app/src/main/res/layout/activity_sign_in.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_sign_in.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvForgotPw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -100,14 +100,14 @@
         android:id="@+id/etPassSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:width="350dp"
         android:alpha="0.5"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:fontFamily="@font/montserrat"
         android:hint="Password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="@color/bg_white"
         android:textColorHint="@color/bg_white"
@@ -132,5 +132,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/tvForgotPw" />
 </androidx.constraintlayout.widget.ConstraintLayout>
